--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-	<title></title>
+	<title>Hello world</title>
 </head>
 <body>
-	<h1></h1>
+	<h1>my first header</h1>
 </body>
